--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="menu_content_1">
             <div class="menu_content_main1">
                <h3>Appetisers</h3>
-                <div class="dots">
+                <div class="dots animation_element fade_in">
                     <span class="dot1"></span>
                     <span class="dot2"></span>
                     <span class="dot3"></span>
@@ -116,7 +116,7 @@
             </div>
             <div class="menu_content_main2">
                 <h3>Salads</h3>
-                <div class="dots">
+                <div class="dots animation_element fade_in">
                     <span class="dot1"></span>
                     <span class="dot2"></span>
                     <span class="dot3"></span>
@@ -140,7 +140,7 @@
         <div class="menu_content_2">
             <div class="menu_content_main3">
                 <h3>Starters</h3>
-                <div class="dots">
+                <div class="dots animation_element fade_in">
                     <span class="dot1"></span>
                     <span class="dot2"></span>
                     <span class="dot3"></span>
@@ -159,7 +159,7 @@
             </div>
             <div class="menu_content_main4">
                 <h3>Dishes</h3>
-                <div class="dots">
+                <div class="dots animation_element fade_in">
                     <span class="dot1"></span>
                     <span class="dot2"></span>
                     <span class="dot3"></span>
@@ -255,20 +255,50 @@
 <!--about-->
 <section id="about" class="about">
     <div class="about_flexContainer">
-        <div class="about_content_1">
+        <div class="about_content_1 animation_element fade_in">
             <h2>About Us</h2>
+            <div class="endDots">
+                <span class="end1"></span>
+                <span class="end2"></span>
+                <span class="end3"></span>
+                <span class="end4"></span>
+                <span class="end4"></span>
+                <span class="end3"></span>
+                <span class="end2"></span>
+                <span class="end1"></span>
+            </div>
             <p>True Food Kitchen's new and expanded Chelsea location represents a truly authentic
             Greek patisserie, featuring breakfasts of fresh croissants and steaming bowls
             of cafe. True Food Kitchen the best restaurants in the town</p>
         </div>
-        <div class="about_content_2">
+        <div class="about_content_2 animation_element fade_in">
             <h2>Opening Hours</h2>
+            <div class="endDots">
+            <span class="end1"></span>
+            <span class="end2"></span>
+            <span class="end3"></span>
+            <span class="end4"></span>
+            <span class="end4"></span>
+            <span class="end3"></span>
+            <span class="end2"></span>
+            <span class="end1"></span>
+            </div>
             <p>Mon-Thu: 9:00am-8:00pm</p>
             <p>Fri-San: 10:00am-10:00pm</p>
             <img src="files/fotterpayments.png">
         </div>
-        <div class="about_content_3">
+        <div class="about_content_3 animation_element fade_in">
             <h2>Our Location</h2>
+            <div class="endDots">
+            <span class="end1"></span>
+            <span class="end2"></span>
+            <span class="end3"></span>
+            <span class="end4"></span>
+            <span class="end4"></span>
+            <span class="end3"></span>
+            <span class="end2"></span>
+            <span class="end1"></span>
+            </div>
             <p>19th Paradise street Sitia 128 <br>Meserole Avenue</p>
             <p>Follow Us on =></p>
 
